2015-10-21 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Common, SampleHist: HistoCheckCrash flag moved to Common (TtHFitter::HISTOCHECKCRAS) -> correctly propagated to SampleHist
        * TtHFit: Fit method: Asimov used if no data
        * TtHFit: Fix: no smooth method called if no smooth and symmetrization set for syst
        * HistoTools: if no crash, negative syst hist bins set to 1e-06
        * Smone cleaning of outdated files
        
2015-10-20 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit: option added for outout image format
        * New config file for default ttHbbLjet fit
        
2015-10-15 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Region, TthPlot: bin-blinding (as in tth bb lep analysis Run 2) implemented; use the option "BlindingThreshold: 0.02" under Fit in config
        * TtHFit: NP ranking small fixes + parallelization (use inline option Ranking=<name/index of systematic> to run on for single NP - then merge at the plotting stage, with the option Ranking=plot)
        * TtHFit: NP ranking plot method added (run with r argument with no "Ranking" option or with Ranking=plot option)

2015-10-14 Arthur Chomont <arthur.chomont@cern.ch>
        * TtHFit, FittingTool: NP Ranking ported to new Fitting routine
        
2015-10-09 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Sample: added option to include Samples only in some Regions (use Regions: and/or Exclude: in config file)
        * Other small fixes
        * TtHFit, SampleHist: OVERALL systs now saved with correct name as histograms in root file
        * TtHFit: option added in order to write and read separated root files for different regions (faster and can be parallelized)
        * TtHFit: Separation plot added (by Leonid Serkin)
        * TtHFit, FittingTool: Ranking plot stuff partially ported to new Fitting routine
        
2015-10-03 Loic Valery <lvalery@cern,ch>